Cyberduck
https://cyberduck.io/

6.1
- [Feature] Search files fast without recursively listing directories (OneDrive)
- [Feature] Search files fast without recursively listing directories (S3)
- [Feature] Search files fast without recursively listing directories (Dropbox)
- [Feature] Search files fast without recursively listing directories (Google Drive)
- [Feature] Group protocols by type in bookmark window (Mac)
- [Bugfix] Missing x-amz-server-side-encryption header when creating folders (S3) (#9378)
- [Bugfix] Interoperability with vault version 6 (Cryptomator)
- [Bugfix] Missing content length header in uploads to SharePoint Online (OneDrive)
- [Bugfix] Always trust invalid certificate setting not remembered (Windows)

6.0.4 [https://trac.cyberduck.io/milestone/6.0.4]
- [Bugfix] Failure to upload to root of vault (Cryptomator)
- [Bugfix] Disable x-amz-request-payer header for non AWS endpoints (S3)

6.0.2 [https://trac.cyberduck.io/milestone/6.0.2]
- [Bugfix] Invalid version number format for Mac App Store (Mac)

6.0.1 [https://trac.cyberduck.io/milestone/6.0.1]
- [Bugfix] New connections do not authenticate (Dropbox) (#9932)
- [Bugfix] Large file uploads do not resume (Backblaze B2) (#9935)
- [Bugfix] Failure listing folders with whitespace (OneDrive) (#9937)
- [Bugfix] Failure duplicating files (FTP) (#9933)
- [Bugfix] Failure uploading files with temporary filename option enabled (Backblaze B2)
- [Bugfix] Failure connecting to local disk (Windows)
- [Bugfix] Multipart uploads fail if the user lacks permission to list multipart uploads (S3) (#9948)
- [Bugfix] Synchronize files in vault (Cryptomator)
- [Bugfix] Repeated login prompt (2-Factor Authentication SFTP)
- [Bugfix] Enable copy of text from log drawer (Windows) (#9952)

6.0 [https://trac.cyberduck.io/milestone/6.0]
- [Feature] Create encrypted vault interopable with Cryptomator (#7937)
- [Feature] Encrypt uploads into vault (Cyptomator)
- [Feature] Decrypt downloads from vault (Cyptomator)