@@ -27,6 +27,7 @@
             color: black;
         }
 
+
     </style>
 </head>
 
@@ -51,13 +52,16 @@
     <li>[Feature] Search files fast without recursively listing directories (S3)</li>
     <li>[Feature] Search files fast without recursively listing directories (Dropbox)</li>
     <li>[Feature] Search files fast without recursively listing directories (Google Drive)</li>
-    <li>[Feature] Group protocols by type in bookmark window (Mac)</li>
+    <li>[Feature] Group protocols by type in bookmark window</li>
     <li>[Bugfix] Missing x-amz-server-side-encryption header when creating folders (S3) (<a
             href="https://trac.cyberduck.io/ticket/9378">#9378</a>)
     </li>
     <li>[Bugfix] Interoperability with vault version 6 (Cryptomator)</li>
     <li>[Bugfix] Missing content length header in uploads to SharePoint Online (OneDrive)</li>
     <li>[Bugfix] Always trust invalid certificate setting not remembered (Windows)</li>
+    <li>[Bugfix] Unable to rename files larger than 5 GB (S3) (<a
+            href="https://trac.cyberduck.io/ticket/9983">#9983</a>)
+    </li>
 </ul>
 
 <p>
